bdr.BDR.scala.error
Erreur de compilation :
BDR:24: error: ';' expected but 'else' found.
  else if (litMessage() == "C")
  ^BDR:29: error: ';' expected but 'else' found.
  else if (litMessage() == "Z")
  ^BDR:32: error: ';' expected but 'else' found.
  else if (litMessage() == "Y")
  ^BDR:36: error: ';' expected but 'else' found.
  else (litMessage = "X")
  ^